@@ -1,3 +1,9 @@
+2007-06-17  Brian Cameron  <brian.cameron@sun.com>
+
+	* daemon/xdmcp.c, daemon/misc.c: Fix crashing issue with
+	  XDMCP logic.  Fixes problem with accessing NULL pointers
+	  when using IPv4 with IPv6 enabled.  Fixes bug #436725.  
+
 2007-05-28  William Jon McCann  <mccann@jhu.edu>
 
         * Release 2.18.2:
